test/parse-errors/need-block-context.nz
f void()
	when
		when
			0
		else
			1
	match match
		some
			0
		none
			1
	match \
